--- a/debian/po/ca.po
+++ b/debian/po/ca.po
@@ -11,10 +11,10 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: debian-installer 1.0\n"
+"Project-Id-Version: debian-installer 1.1\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2005-08-18 18:32-0600\n"
-"PO-Revision-Date: 2005-09-24 18:38+0300\n"
+"PO-Revision-Date: 2006-02-05 23:02+0100\n"
 "Last-Translator: Jordi Mallach <jordi@debian.org>\n"
 "Language-Team: Catalan <debian-l10n-catalan@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -31,7 +31,6 @@ msgstr "Continua sense un carregador"
 #. Type: note
 #. Description
 #: ../nobootloader.templates:8
-#, fuzzy
 msgid ""
 "Some variables need to be set in the Pegasos OpenFirmware in order for your "
 "system to boot linux automatically.  At the end of the installation, the "
@@ -39,8 +38,8 @@ msgid ""
 "OpenFirmware variables to enable auto-booting:"
 msgstr ""
 "Es necessita establir algunes variables al Pegasos OpenFirmware per a poder "
-"arrencar el sistema automàticament. A final de la instal·lació, el sistema "
-"arrencarà de nou. A l'indicatiu de Pegasos OpenFirmware, establiu les "
+"arrencar Linux automàticament. A final de la instal·lació, el sistema "
+"tornarà a arrencar. A l'indicatiu del Pegasos OpenFirmware, establiu les "
 "següents variables d'OpenFirmware per a habilitar l'arrencada automàtica:"
 
 #. Type: note
@@ -87,7 +86,6 @@ msgstr ""
 #. Type: note
 #. Description
 #: ../nobootloader.templates:30
-#, fuzzy
 msgid ""
 "Some variables need to be set in the Netwinder NeTTrom firmware in order for "
 "your system to boot linux automatically.  At the end of this installation "
@@ -95,11 +93,12 @@ msgid ""
 "You can abort this by pressing any key. You will then be dropped into the "
 "NeTTrom command system where you have to execute the following commands:"
 msgstr ""
-"\"Es necessita establir algunes variables al microprogramari Netwinder "
-"NetTrom per a poder arrencar el sistema Debian automàticament. A final de la "
-"instal·lació, el sistema arrencarà de nou, i el microprogramari tractarà "
-"d'arrencar. Podeu avortar això prement qualsevol tecla. Aleshores, entrareu "
-"al sistema d'ordres de NeTTrom on podeu executar les següents ordres:"
+"Es necessita establir algunes variables al microprogramari Netwinder NetTrom "
+"per a poder arrencar Linux automàticament. A final de la instal·lació, el "
+"sistema tornarà a arrencar, i el microprogramari tractarà d'arrencar "
+"automàticament. Podeu avortar això prement qualsevol tecla. Aleshores, "
+"entrareu al sistema d'ordres de NeTTrom on heu d'executar les següents "
+"ordres:"
 
 #. Type: note
 #. Description
