--- a/debian/po/cy.po
+++ b/debian/po/cy.po
@@ -12,7 +12,7 @@ msgstr ""
 "Project-Id-Version: debian-installer\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2005-08-18 18:32-0600\n"
-"PO-Revision-Date: 2004-10-06 08:15+0100\n"
+"PO-Revision-Date: 2006-03-17 18:02+0000\n"
 "Last-Translator: Dafydd Harries <daf@muse.19inch.net>\n"
 "Language-Team: Welsh <daf@muse.19inch.net>\n"
 "MIME-Version: 1.0\n"
@@ -141,7 +141,7 @@ msgid ""
 "because your specific architecture doesn't support a boot loader yet."
 msgstr ""
 "Does dim llwythydd bŵt wedi cael ei sefydlu, un ai oherwydd dewisoch chi "
-"beidio, neu oherwydd dyw eich pensaerniaeth penodol ddim yn cynnal llywthydd "
+"beidio, neu oherwydd dyw eich pensaerniaeth penodol ddim yn cynnal llwythydd "
 "bŵt eto."
 
 #. Type: note
