--- a/debian/po/et.po
+++ b/debian/po/et.po
@@ -3,54 +3,38 @@
 #
 # DO NOT MODIFY IT DIRECTLY : SUCH CHANGES WILL BE LOST
 # 
-# translation of et.po to Eesti
-#
-#
-# Debian Installer master translation file template
-# Don't forget to properly fill-in the header of PO files
-#
-# Debian Installer translators, please read the D-I i18n documentation
-# in doc/i18n/i18n.txt
-# Siim P√µder <windo@windowlicker.dyn.ee>, 2005.
-#
-#
 msgid ""
 msgstr ""
-"Project-Id-Version: et\n"
+"Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2005-08-18 18:32-0600\n"
-"PO-Revision-Date: 2005-06-08 11:11+0300\n"
-"Last-Translator: Siim P√µder <windo@windowlicker.dyn.ee>\n"
+"PO-Revision-Date: 2006-06-22 11:21+0300\n"
+"Last-Translator: Siim Pıder <windo@windowlicker.dyn.ee>\n"
 "Language-Team: Eesti <linuxiabi@hot.ee>\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=UTF-8\n"
+"Content-Type: text/plain; charset=iso-8859-1\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Poedit-Language: Estonian\n"
-"X-Poedit-Country: ESTONIA\n"
-"X-Poedit-SourceCharset: utf-8\n"
-"X-Generator: KBabel 1.9.1\n"
 
 #. Type: text
 #. Description
 #. Main menu item
 #: ../nobootloader.templates:4
 msgid "Continue without boot loader"
-msgstr "J√§tka ilma alglaadurita"
+msgstr "J‰tka ilma alglaadurita"
 
 #. Type: note
 #. Description
 #: ../nobootloader.templates:8
-#, fuzzy
 msgid ""
 "Some variables need to be set in the Pegasos OpenFirmware in order for your "
 "system to boot linux automatically.  At the end of the installation, the "
 "system will reboot.  At the Pegasos OpenFirmware prompt, set the following "
 "OpenFirmware variables to enable auto-booting:"
 msgstr ""
-"Et su s√ºsteem v√µiks automaatselt Debiani alglaadida, tuleb seada m√µned "
-"Pegasos OpenFirmware muutujad. Paigaldamise l√µpus sooritab s√ºsteem "
+"Et su s¸steem vıiks automaatselt linuxi alglaadida, tuleb seada mıned "
+"Pegasos OpenFirmware muutujad. Paigaldamise lıpus sooritab s¸steem "
 "alglaadimise. Automaatse alglaadimise saavutamiseks sisesta Pegasos "
-"OpenFirmware k√§sureal j√§rgnevad muutujad:"
+"OpenFirmware k‰sureal j‰rgnevad muutujad:"
 
 #. Type: note
 #. Description
@@ -71,7 +55,7 @@ msgstr ""
 #: ../nobootloader.templates:8
 msgid ""
 "Alternatively, you will be able to boot the kernel manually by entering :"
-msgstr "Teise variandina v√µid tuuma ka k√§sitsi alglaadida, sisestades:"
+msgstr "Teise variandina vıid tuuma ka k‰sitsi alglaadida, sisestades:"
 
 #. Type: note
 #. Description
@@ -83,18 +67,17 @@ msgstr " ${KERNEL_BOOT}"
 #. Description
 #: ../nobootloader.templates:8
 msgid "at the OpenFirmware prompt."
-msgstr "OpenFirmware k√§sureal."
+msgstr "OpenFirmware k‰sureal."
 
 #. Type: note
 #. Description
 #: ../nobootloader.templates:30
 msgid "Setting firmware variables for automatic boot"
-msgstr "P√ºsivara muutujate seadmine automaatseks alglaadimiseks"
+msgstr "P¸sivara muutujate seadmine automaatseks alglaadimiseks"
 
 #. Type: note
 #. Description
 #: ../nobootloader.templates:30
-#, fuzzy
 msgid ""
 "Some variables need to be set in the Netwinder NeTTrom firmware in order for "
 "your system to boot linux automatically.  At the end of this installation "
@@ -102,11 +85,11 @@ msgid ""
 "You can abort this by pressing any key. You will then be dropped into the "
 "NeTTrom command system where you have to execute the following commands:"
 msgstr ""
-"Et su s√ºsteem v√µiks automaatselt Debiani alglaadida, tuleb Netwinder NETTRom "
-"p√ºsivaras seada m√µned muutujad. Selle paigaldamisastme l√µpus sooritab "
-"s√ºsteem alglaadimise, misj√§rel p√ºsivara p√º√ºab automaatselt alglaadida. Selle "
-"peatamiseks vajuta suvalist klahvi. Sind lastakse NeTTrom k√§sus√ºsteemi, kus "
-"pead k√§ivitama j√§rgnevad k√§sud:"
+"Et su s¸steem vıiks automaatselt linuxi alglaadida, tuleb Netwinder NETTRom "
+"p¸sivaras seada mıned muutujad. Selle paigaldamisastme lıpus sooritab "
+"s¸steem alglaadimise, misj‰rel p¸sivara p¸¸ab automaatselt alglaadida. Selle "
+"peatamiseks vajuta suvalist klahvi. Sind lastakse NeTTrom k‰sus¸steemi, kus "
+"pead sisestama j‰rgnevad k‰sud:"
 
 #. Type: note
 #. Description
@@ -129,19 +112,18 @@ msgstr ""
 #. Type: note
 #. Description
 #: ../nobootloader.templates:30
-#, fuzzy
 msgid ""
 "You will only need to do this once.  Afterwards, enter the \"boot\" command "
 "or reboot the system to proceed to the next installation stage."
 msgstr ""
-"Pead n√µnda tegema ainult √ºhe korra. Edaspidi sisesta k√§sk \"boot\" v√µi "
-"soorita alglaadimine, et j√§tkata Debiani paigaldamise j√§rgmise astmega."
+"Pead nında tegema ainult ¸he korra. Edaspidi sisesta k‰sk \"boot\" vıi "
+"soorita alglaadimine, et j‰tkata paigaldamise j‰rgmise astmega."
 
 #. Type: note
 #. Description
 #: ../nobootloader.templates:50
 msgid "No boot loader installed"
-msgstr "√úhtki alglaadurit pole paigaldatud"
+msgstr "‹htki alglaadurit pole paigaldatud"
 
 #. Type: note
 #. Description
@@ -150,17 +132,16 @@ msgid ""
 "No boot loader has been installed, either because you chose not to or "
 "because your specific architecture doesn't support a boot loader yet."
 msgstr ""
-"√úhtki alglaadurit ei paigaldatud, kuna sa kas ise soovisid alglaadurit mitte "
-"paigaldada v√µi siis pole su spetsiifilist arhitektuuri toetavat alglaadurit "
+"‹htki alglaadurit ei paigaldatud, kuna sa kas ise soovisid alglaadurit mitte "
+"paigaldada vıi siis pole su spetsiifilist arhitektuuri toetavat alglaadurit "
 "saadaval."
 
 #. Type: note
 #. Description
 #: ../nobootloader.templates:50
-#, fuzzy
 msgid ""
 "You will need to boot manually with the ${KERNEL} kernel on partition "
 "${BOOT} and ${ROOT} passed as a kernel argument."
 msgstr ""
-"Pead alglaadima k√§sitsi tuuma ${KERNEL} partitsioonil ${BOOT} sisestades "
+"Pead alglaadima k‰sitsi tuuma ${KERNEL} partitsioonil ${BOOT} sisestades "
 "tuuma argumendiks ${ROOT}."
