--- a/debian/po/ne.po
+++ b/debian/po/ne.po
@@ -4,28 +4,21 @@
 # DO NOT MODIFY IT DIRECTLY : SUCH CHANGES WILL BE LOST
 # 
 # translation of template.po to Nepali
-#
-# Debian Installer master translation file template
-# Don't forget to properly fill-in the header of PO files#
-# Debian Installer translators, please read the D-I i18n documentation
-# in doc/i18n/i18n.txt#
-# Shiva  Pokharel <pokharelshiva@hotmail.com>, 2006.
-# Shiva Pokharel <pokharelshiva@hotmail.com>, 2006.
 # Shyam Krishna Bal <shyamkrishna_bal@yahoo.com>, 2006.
-#
+# Shiva Pokharel <pokharelshiva@hotmail.com>, 2006.
 msgid ""
 msgstr ""
 "Project-Id-Version: template\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2005-08-18 18:32-0600\n"
-"PO-Revision-Date: 2006-05-10 12:51+0545\n"
+"PO-Revision-Date: 2006-06-06 14:34+0545\n"
 "Last-Translator: Shiva Pokharel <pokharelshiva@hotmail.com>\n"
 "Language-Team: Nepali <info@mpp.org.np>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: KBabel 1.10.2\n"
 "Plural-Forms: nplurals=2;plural=(n!=1)\n"
+"X-Generator: KBabel 1.10.2\n"
 
 #. Type: text
 #. Description
@@ -43,7 +36,7 @@ msgid ""
 "system will reboot.  At the Pegasos OpenFirmware prompt, set the following "
 "OpenFirmware variables to enable auto-booting:"
 msgstr ""
-"तपाईँको प्रणालीमा लिनक्सलाई स्वत: बुट गर्नको लागि केही चलहरू Pegasos खुल्ला फर्मवेयरमा "
+"तपाईँको प्रणालीमा लिनक्सलाई स्वत: बुट गर्नका लागि केही चलहरू Pegasos खुल्ला फर्मवेयरमा "
 "सेट हुनु आवश्यक छ । स्थापनाको चरणको समाप्तीमा, प्रणालीले पुन:बुट गर्दछ । Pegasos खुल्ला "
 "फर्मवेयर प्रोम्प्टमा, स्वत-बुटिङलाई सक्षम गर्न निम्न खुल्ला फर्मवेयर चलहरू सेट गर्नुहोस्:"
 
@@ -56,6 +49,10 @@ msgid ""
 " setenv auto-boot-timeout 5000\n"
 " setenv auto-boot? true"
 msgstr ""
+" setenv boot-device ${OF_BOOT_DEVICE}\n"
+" setenv boot-file ${OF_BOOT_FILE}\n"
+" setenv auto-boot-timeout 5000\n"
+" setenv auto-boot? true"
 
 #. Type: note
 #. Description
@@ -63,7 +60,7 @@ msgstr ""
 msgid ""
 "Alternatively, you will be able to boot the kernel manually by entering :"
 msgstr ""
-"वैकल्पिक रुपमा, तपाईँ कर्नललाई प्रविष्टि द्वारा म्यानुअल तरिकाले बुट गर्न सक्षम हुनु हुनेछ :"
+"वैकल्पिक रुपमा, तपाईँ कर्नेललाई प्रविष्टि द्वारा म्यानुअल तरिकाले बुट गर्न सक्षम हुनु हुनेछ :"
 
 #. Type: note
 #. Description
@@ -81,7 +78,7 @@ msgstr "Firmware प्रोम्पट खोल्दा ।"
 #. Description
 #: ../nobootloader.templates:30
 msgid "Setting firmware variables for automatic boot"
-msgstr "स्वत बुट गर्नको लागि firmware चलहरू सेट गरिदै"
+msgstr "स्वत बुट गर्नका लागि firmware चलहरू सेट गरिदै"
 
 #. Type: note
 #. Description
@@ -93,7 +90,7 @@ msgid ""
 "You can abort this by pressing any key. You will then be dropped into the "
 "NeTTrom command system where you have to execute the following commands:"
 msgstr ""
-"तपाईँको प्रणालीमा लिनक्सलाई स्वत: बुट गर्नको लागि केही चलहरू Netwinder NeTTrom "
+"तपाईँको प्रणालीमा लिनक्सलाई स्वत: बुट गर्नका लागि केही चलहरू Netwinder NeTTrom "
 "फर्मवेयरमा सेट हुनु आवश्यक छ । स्थापनाको चरणको समाप्तीमा, प्रणालीले पुन:बुट गर्दछ, र "
 "फर्मवेयरले स्वत:बुट गर्ने कोसिस गर्दछ । तपाईँ यसलाई कुनै कुञ्जी थिचेर परित्याग गर्न सक्नुहुन्छ । "
 "त्यसपछि तपाईँ NeTTrom आदेश प्रणालीमा छोडिनुहुन्छ जहाँ तपाईँले निम्न आदेशहरू कार्यन्वयन "
@@ -110,6 +107,12 @@ msgid ""
 "   setenv cmdappend ${CMDAPPEND}\n"
 "   save-all"
 msgstr ""
+"   setenv kernconfig fs\n"
+"   setenv kerndev ${KERNDEV}\n"
+"   setenv kernfile ${KERNFILE}\n"
+"   setenv rootdev ${ROOTDEV}\n"
+"   setenv cmdappend ${CMDAPPEND}\n"
+"   save-all"
 
 #. Type: note
 #. Description
@@ -144,5 +147,5 @@ msgid ""
 "You will need to boot manually with the ${KERNEL} kernel on partition "
 "${BOOT} and ${ROOT} passed as a kernel argument."
 msgstr ""
-"विभाजन ${BOOT} र ${ROOT} मा कर्नल तर्कको रुपमा पास भए जस्तै ${KERNEL} संगै तपाईँले "
+"विभाजन ${BOOT} र ${ROOT} मा कर्नेल तर्कको रुपमा पास भए जस्तै ${KERNEL} सँगै तपाईँले "
 "म्यानुअल तरिकाले बुट गर्नु पर्नेछ ।"
