--- a/debian/po/es.po
+++ b/debian/po/es.po
@@ -9,15 +9,14 @@
 #
 # Contributors to the translation of debian-installer:
 # Teófilo Ruiz Suárez <teo@debian.org>, 2003.
-# Javier Fernández-Sanguino <jfs@debian.org>, 2003.
 # David Martínez Moreno <ender@debian.org>, 2003, 2005.
 # Carlos Alberto Martín Edo <carlos@dat.etsit.upm.es>, 2003
 # Carlos Valdivia Yagüe <valyag@dat.etsit.upm.es>, 2003
 # Rudy Godoy <rudy@kernel-panik.org>, 2003
 # Steve Langasek <vorlon@debian.org>, 2004
 # Enrique Matias Sanchez (aka Quique) <cronopios@gmail.com>, 2005
-# Javier Fernández-Sanguino <jfs@debian.org>, 2004-2005
 # Rubén Porras Campo <nahoo@inicia.es>, 2005
+# Javier Fernández-Sanguino <jfs@debian.org>, 2003-2006
 #
 # Equipo de traducción al español, por favor lean antes de traducir
 # los siguientes documentos:
@@ -39,7 +38,7 @@ msgstr ""
 "Project-Id-Version: debian-installer\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2005-08-18 18:32-0600\n"
-"PO-Revision-Date: 2005-08-21 01:46+0200\n"
+"PO-Revision-Date: 2006-08-13 23:34+0200\n"
 "Last-Translator: Javier Fernández-Sanguino Peña <jfs@debian.org>\n"
 "Language-Team:  Debian Spanish <debian-l10n-spanish@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -119,7 +118,7 @@ msgid ""
 msgstr ""
 "Debe establecer algunas variables en el firmware del Netwinder NeTTrom para "
 "poder arrancar linux de forma automática. Al final de la instalación el "
-"sistema rearrancará y el firmware intentará auto-arrancar. Puede cancelar "
+"sistema rearrancará y el firmware intentará auto-arrancar. Puede interrumpir "
 "este arranque pulsando cualquier tecla. Entrará en el sistema de órdenes de "
 "NeTTrom donde deberá ejecutar las siguientes órdenes:"
 
@@ -149,8 +148,8 @@ msgid ""
 "or reboot the system to proceed to the next installation stage."
 msgstr ""
 "Sólo tendrá que hacer ésto una vez. Para pasar al siguiente paso de la "
-"instalación deberá introducir, más adelante, la orden \"boot\" o reiniciar "
-"el sistema."
+"instalación deberá introducir, más adelante, la orden «boot» o reiniciar el "
+"sistema."
 
 #. Type: note
 #. Description
