--- a/debian/po/se.po
+++ b/debian/po/se.po
@@ -16,9 +16,9 @@ msgstr ""
 "Project-Id-Version: se\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2005-08-18 18:32-0600\n"
-"PO-Revision-Date: 2006-05-24 20:20+0200\n"
+"PO-Revision-Date: 2006-08-22 11:39+0200\n"
 "Last-Translator: Børre Gaup <boerre@skolelinux.no>\n"
-"Language-Team: Northern Sami <i18n-sme@lister.ping.uio.no>\n"
+"Language-Team: Northern Sami <se@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -29,7 +29,7 @@ msgstr ""
 #. Main menu item
 #: ../nobootloader.templates:4
 msgid "Continue without boot loader"
-msgstr ""
+msgstr "Joatkke vuolggáhangieđahalli haga"
 
 #. Type: note
 #. Description
@@ -60,7 +60,7 @@ msgstr ""
 #: ../nobootloader.templates:8
 msgid ""
 "Alternatively, you will be able to boot the kernel manually by entering :"
-msgstr ""
+msgstr "Evtolaččat sáhtát vuolggáhit čoahku jus čálát:"
 
 #. Type: note
 #. Description
@@ -116,12 +116,14 @@ msgid ""
 "You will only need to do this once.  Afterwards, enter the \"boot\" command "
 "or reboot the system to proceed to the next installation stage."
 msgstr ""
+"Dán darbbašat dušše oktii dahkat. Maŋŋileabbut čále «boot»-gohččuma dahje "
+"vuolggát vuogádaga ođđasit jus hálidat joatkit boahtte sajáiduhttinlávkái."
 
 #. Type: note
 #. Description
 #: ../nobootloader.templates:50
 msgid "No boot loader installed"
-msgstr ""
+msgstr "Ii oktage vuolggáhangieđahalli sajáiduhtton"
 
 #. Type: note
 #. Description
@@ -130,6 +132,8 @@ msgid ""
 "No boot loader has been installed, either because you chose not to or "
 "because your specific architecture doesn't support a boot loader yet."
 msgstr ""
+"Ii oktage vuolggáhangieđahalli sajáiduhtton, dannego ieš leat válljen dahje "
+"du arkitektuvra ii doarjjo makkárge vuolggáhangieđahalli vel."
 
 #. Type: note
 #. Description
