--- a/debian/po/ml.po
+++ b/debian/po/ml.po
@@ -19,13 +19,12 @@ msgstr ""
 "Project-Id-Version: ml\n"
 "Report-Msgid-Bugs-To: debian-boot@lists.debian.org\n"
 "POT-Creation-Date: 2007-01-06 22:48+0100\n"
-"PO-Revision-Date: 2006-12-03 15:43+0530\n"
+"PO-Revision-Date: 2007-01-18 08:21+0530\n"
 "Last-Translator: Praveen A <pravi.a@gmail.com>\n"
 "Language-Team: malayalam <smc-discuss@googlegroups.com>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: KBabel 1.11.4\n"
 
 #. Type: text
 #. Description
@@ -54,7 +53,7 @@ msgid ""
 "Alternatively, you will be able to boot the kernel manually by entering, at "
 "the firmware prompt:"
 msgstr ""
-"ഇതിനു പകരമായി ഫേംവെയര്‍ പ്രോംപ്റ്റില്‍ കെര്ണല്‍ മാന്വലായി എന്റര്‍ ചെയ്ത് നിങ്ങള്ക്ക് ബൂട്ട് ചെയ്യാന് "
+"ഇതിനു പകരമായി ഫേംവെയര്‍ പ്രോംപ്റ്റില്‍ കെര്‍ണല്‍ മാന്വലായി എന്റര്‍ ചെയ്ത് നിങ്ങള്ക്ക് ബൂട്ട് ചെയ്യാന് "
 "കഴിയും:"
 
 #. Type: note
@@ -112,5 +111,5 @@ msgid ""
 "You will need to boot manually with the ${KERNEL} kernel on partition "
 "${BOOT} and ${ROOT} passed as a kernel argument."
 msgstr ""
-"നിങ്ങള്ക്ക് ${BOOT} ഭാഗത്ത് ${KERNEL} കെര്ണലും ${ROOT} ഉം കെര്ണല്‍ ആര്ഗ്യുമെന്റ് ആയി കൊടുത്ത് "
+"നിങ്ങള്ക്ക് ${BOOT} ഭാഗത്ത് ${KERNEL} കെര്ണലും ${ROOT} ഉം കെര്‍ണല്‍ ആര്ഗ്യുമെന്റ് ആയി കൊടുത്ത് "
 "മാന്വലായി ബൂട്ട് ചെയ്യേണ്ടി വരും."
