--- a/debian/po/ml.po
+++ b/debian/po/ml.po
@@ -4,24 +4,23 @@
 # DO NOT MODIFY IT DIRECTLY : SUCH CHANGES WILL BE LOST
 # 
 # translation of ml.po to malayalam
-# http://fci.wikia.com/wiki/Debian/മലയാളം/ഇന്സ്റ്റാളര്‍/ലെവല്‍1/മാസ്റ്റര്‍/ml.po
-# Copyright (c)  2006 Praveen A <pravi.a@gmail.com>, Santhosh Thottingal <santhosh00@gmail.com>, Sreejith :: ശ്രീജിത്ത് കെ <sreejithk2000@gmail.com> and Debian Project
-# Credits:  V Sasi Kumar, Sreejith N and Seena N
+# Copyright (c)  2006-2007 Praveen|പ്രവീണ്‍ A|എ <pravi.a@gmail.com>, Santhosh Thottingal <santhosh00@gmail.com>, Sreejith :: ശ്രീജിത്ത് കെ <sreejithk2000@gmail.com> and Debian Project
+# Credits:  V Sasi Kumar, Sreejith N, Seena N, Anivar Aravind, Hiran Venugopalan and Suresh P
 #
 # Debian Installer master translation file template
 # Don't forget to properly fill-in the header of PO files
 # Debian Installer translators, please read the D-I i18n documentation
 # in doc/i18n/i18n.txt#
 #
-# Praveen A <pravi.a@gmail.com>, 2006.
 msgid ""
 msgstr ""
-"Project-Id-Version: ml\n"
+"Project-Id-Version: Debian Installer Level 1\n"
 "Report-Msgid-Bugs-To: debian-boot@lists.debian.org\n"
 "POT-Creation-Date: 2007-01-06 22:48+0100\n"
-"PO-Revision-Date: 2007-01-18 08:21+0530\n"
+"PO-Revision-Date: 2007-02-17 20:46+0530\n"
 "Last-Translator: Praveen A <pravi.a@gmail.com>\n"
-"Language-Team: malayalam <smc-discuss@googlegroups.com>\n"
+"Language-Team: Swathanthra Malayalam Computing <smc-discuss@googlegroups."
+"com>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -42,9 +41,9 @@ msgid ""
 "will reboot.  At the firmware prompt, set the following firmware variables "
 "to enable auto-booting:"
 msgstr ""
-"നിങ്ങളുടെ സിസ്റ്റം സ്വയം ബൂട്ട് ചെയ്യുന്നതിന് ജെനസി ഫേംവെയറില്‍ ചില വാരിയബ്ള്സ് സെറ്റ് "
-"ചെയ്യേണ്ടതായുണ്ട്. ഇന്സ്റ്റലേഷനവസാനം സിസ്റ്റം റീബൂട്ട് ചെയ്യും. ഓട്ടോ-ബൂട്ടിങ്ങ് ഇനേബ്ള്‍ ചെയ്യാന്‍ "
-"ഫേംവെയര്‍ പ്രോംപ്റ്റില്‍ താഴെ കൊടുത്തിരിക്കുന്ന ഫേംവെയര്‍ വാരിയബ്ള്സ് സെറ്റ് ചെയ്യുക:"
+"നിങ്ങളുടെ സിസ്റ്റം സ്വയം ബൂട്ട് ചെയ്യുന്നതിന് ജെനസി ഫേംവെയറില്‍ ചില വാരിയബിള്‍സ് സെറ്റ് "
+"ചെയ്യേണ്ടതായുണ്ട്. ഇന്‍സ്റ്റലേഷനവസാനം സിസ്റ്റം റീബൂട്ട് ചെയ്യും. സ്വയം-ബൂട്ടിങ്ങ് ഇനേബിള്‍ ചെയ്യാന്‍ "
+"ഫേംവെയര്‍ പ്രോംപ്റ്റില്‍ താഴെ കൊടുത്തിരിക്കുന്ന ഫേംവെയര്‍ വാരിയബിള്‍സ് സെറ്റ് ചെയ്യുക:"
 
 #. Type: note
 #. Description
@@ -53,14 +52,14 @@ msgid ""
 "Alternatively, you will be able to boot the kernel manually by entering, at "
 "the firmware prompt:"
 msgstr ""
-"ഇതിനു പകരമായി ഫേംവെയര്‍ പ്രോംപ്റ്റില്‍ കെര്‍ണല്‍ മാന്വലായി എന്റര്‍ ചെയ്ത് നിങ്ങള്ക്ക് ബൂട്ട് ചെയ്യാന് "
+"ഇതിനു പകരമായി ഫേംവെയര്‍ പ്രോംപ്റ്റില്‍ കെര്‍ണല്‍ മാന്വലായി എന്റര്‍ ചെയ്ത് നിങ്ങള്‍ക്ക് ബൂട്ട് ചെയ്യാന്‍ "
 "കഴിയും:"
 
 #. Type: note
 #. Description
 #: ../nobootloader.templates:31
 msgid "Setting firmware variables for automatic boot"
-msgstr "സ്വയം ബൂട്ട് ചെയ്യുന്നതിന് ഫേംവെയര്‍ വാരിയബ്ള്സ് സെറ്റ് ചെയ്തു കൊണ്ടിരിക്കുന്നു"
+msgstr "സ്വയം ബൂട്ട് ചെയ്യുന്നതിന് ഫേംവെയര്‍ വാരിയബിള്‍സ് സെറ്റ് ചെയ്തു കൊണ്ടിരിക്കുന്നു"
 
 #. Type: note
 #. Description
@@ -73,10 +72,10 @@ msgid ""
 "NeTTrom command system where you have to execute the following commands:"
 msgstr ""
 "നിങ്ങളുടെ സിസ്റ്റം ലിനക്സ് സ്വയം ബൂട്ട് ചെയ്യാനായി Netwinder NeTTrom ഫേംവെയറില്‍ ചില "
-"വാരിയബിള്സ് സെറ്റ് ചെയ്യേണ്ടതുണ്ട്. ഇന്സ്റ്റലേഷനവസാനം സിസ്റ്റം റീബൂട്ട് ചെയ്യുകയും ഫേംവെയര്‍ സ്വയം "
-"ബൂട്ട് ചെയ്യാനായി ശ്രമിക്കുകയും ചെയ്യും. നിങ്ങള്ക്ക് ഇതില്‍ നിന്നും പിന്തിരിയാന്‍ ഏതെങ്കിലും കീ "
-"അമര്ത്താം. നിങ്ങള്‍ NeTTrom കമാന്റ് സിസ്റ്റത്തിലെത്തും അവിടെ നിങ്ങള്ക്ക് താഴെ പറയുന്ന കമാന്റുകള്‍ "
-"പ്രവര്ത്തിപ്പിക്കേണ്ടതായി വരും:"
+"വാരിയബിള്‍സ് സെറ്റ് ചെയ്യേണ്ടതുണ്ട്. ഇന്‍സ്റ്റലേഷനവസാനം സിസ്റ്റം റീബൂട്ട് ചെയ്യുകയും ഫേംവെയര്‍ സ്വയം "
+"ബൂട്ട് ചെയ്യാനായി ശ്രമിക്കുകയും ചെയ്യും. നിങ്ങള്‍ക്ക് ഇതില്‍ നിന്നും പിന്തിരിയാന്‍ ഏതെങ്കിലും കീ "
+"അമര്‍ത്താം. നിങ്ങള്‍ NeTTrom ആജ്ഞാ സിസ്റ്റത്തിലെത്തും അവിടെ നിങ്ങള്‍ക്ക് താഴെ പറയുന്ന ആജ്ഞകള്‍ "
+"പ്രവര്‍ത്തിപ്പിക്കേണ്ടതായി വരും:"
 
 #. Type: note
 #. Description
@@ -85,14 +84,14 @@ msgid ""
 "You will only need to do this once.  Afterwards, enter the \"boot\" command "
 "or reboot the system to proceed to your newly installed system."
 msgstr ""
-"നിങ്ങള്ക്കിത് ഒരു തവണയേ ചെയ്യേണ്ടി വരൂ. അതിനു ശേഷം \"boot\" കമാന്ഡ് എന്റര്‍ ചെയ്യുക അല്ലെങ്കില്‍ "
-"നിങ്ങളുടെ പുതുതായി ഇന്സ്റ്റാള്‍ ചെയ്ത സിസ്റ്റത്തിലേക്ക് പോകാനായി റീബൂട്ട് ചെയ്യുക."
+"നിങ്ങള്‍ക്കിത് ഒരു തവണയേ ചെയ്യേണ്ടി വരൂ. അതിനു ശേഷം \"boot\" കമാന്‍ഡ് എന്റര്‍ ചെയ്യുക അല്ലെങ്കില്‍ "
+"നിങ്ങളുടെ പുതുതായി ഇന്‍സ്റ്റാള്‍ ചെയ്ത സിസ്റ്റത്തിലേക്ക് പോകാനായി റീബൂട്ട് ചെയ്യുക."
 
 #. Type: note
 #. Description
 #: ../nobootloader.templates:51
 msgid "No boot loader installed"
-msgstr "ഒരു ബൂട്ട് ലോഡറും ഇന്സ്റ്റാള്‍ ചെയ്തില്ല"
+msgstr "ഒരു ബൂട്ട് ലോഡറും ഇന്‍സ്റ്റാള്‍ ചെയ്തില്ല"
 
 #. Type: note
 #. Description
@@ -101,8 +100,8 @@ msgid ""
 "No boot loader has been installed, either because you chose not to or "
 "because your specific architecture doesn't support a boot loader yet."
 msgstr ""
-"ഒരു ബൂട്ട് ലോഡറും ഇന്സ്റ്റാള്‍ ചെയ്തില്ല, ഒരു പക്ഷേ വേണ്ടെന്ന് നിങ്ങള്‍ തിരഞ്ഞെടുത്തിരിക്കാം "
-"അല്ലെങ്കില്‍ നിങ്ങളുടെ പ്രത്യേക വാസ്തുവിദ്യ ഒരു ബൂട്ട് ലോഡറിനെ ഇതു വരെ സപ്പോര്ട്ട് ചെയ്യുന്നില്ല."
+"ഒരു ബൂട്ട് ലോഡറും ഇന്‍സ്റ്റാള്‍ ചെയ്തില്ല, ഒരു പക്ഷേ വേണ്ടെന്ന് നിങ്ങള്‍ തിരഞ്ഞെടുത്തിരിക്കാം "
+"അല്ലെങ്കില്‍ നിങ്ങളുടെ പ്രത്യേക വാസ്തുവിദ്യ ഒരു ബൂട്ട് ലോഡറിനെ ഇതു വരെ പിന്തുണക്കുന്നില്ല."
 
 #. Type: note
 #. Description
@@ -111,5 +110,5 @@ msgid ""
 "You will need to boot manually with the ${KERNEL} kernel on partition "
 "${BOOT} and ${ROOT} passed as a kernel argument."
 msgstr ""
-"നിങ്ങള്ക്ക് ${BOOT} ഭാഗത്ത് ${KERNEL} കെര്ണലും ${ROOT} ഉം കെര്‍ണല്‍ ആര്ഗ്യുമെന്റ് ആയി കൊടുത്ത് "
+"നിങ്ങള്‍ക്ക് ${BOOT} ഭാഗത്ത് ${KERNEL} കെര്‍ണലും ${ROOT} ഉം കെര്‍ണല്‍ ആര്‍ഗ്യുമെന്റ് ആയി കൊടുത്ത് "
 "മാന്വലായി ബൂട്ട് ചെയ്യേണ്ടി വരും."
