--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nobootloader (1.19) UNRELEASED; urgency=low
+
+  * Code cleanup: rely on the presence of udevinfo.
+
+ -- Frans Pop <fjp@debian.org>  Thu, 12 Apr 2007 17:15:42 +0200
+
 nobootloader (1.18) unstable; urgency=low
 
   [ Colin Watson ]
