--- a/debian/po/eu.po
+++ b/debian/po/eu.po
@@ -8,22 +8,22 @@
 # Copyright (C) 2003 Software in the Public Interest, Inc.
 # This file is distributed under the same license as debian-installer.
 # Inaki Larranaga Murgoitio 2005
-# 
-# Piarres Beobide <pi@beobide.net>, 2004, 2005, 2006.
+#
+# Piarres Beobide <pi@beobide.net>, 2004, 2005, 2006, 2007.
 msgid ""
 msgstr ""
 "Project-Id-Version: eu\n"
 "Report-Msgid-Bugs-To: debian-boot@lists.debian.org\n"
 "POT-Creation-Date: 2007-03-22 22:49+0000\n"
-"PO-Revision-Date: 2007-02-02 10:26+0100\n"
+"PO-Revision-Date: 2007-04-13 13:12+0200\n"
 "Last-Translator: Piarres Beobide <pi@beobide.net>\n"
 "Language-Team: librezale <librezale@librezale.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Content-Transfer-Encoding=UTF-8Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"X-Generator: Pootle 0.10.1\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"X-Generator: KBabel 1.11.4\n"
+"Plural-Forms: nplurals=2; plural=(n != 1)\n"
 
 #. Type: text
 #. Description
@@ -97,9 +97,9 @@ msgid ""
 "NeTTrom command system where you have to execute the following commands:"
 msgstr ""
 "Aldagai batzuk Netwinder NeTTrom firmwarean ezarri behar dira sistemak "
-"automatikoki abiaraz dezan. Instalazio-fase honen amaieran, sistema "
+"automatikoki abiaraz dezan. Instalazio atal honen amaieran, sistema "
 "berrabiarazi egingo da, eta firmwarea automatikoki abiarazten saiatuko da."
-"Hau edozein tekla sakatuz aborta dezakezu. Orduan, NeTTrom komando-sistemara "
+"Hau edozein tekla sakatuz aborta dezakezu. Orduan, NeTTrom komando sistemara "
 "eramango zaitu eta han komando hauek exekutatu behar dituzu:"
 
 #. Type: note
