--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,30 @@
-nobootloader (1.20) UNRELEASED; urgency=low
+nobootloader (1.20) unstable; urgency=low
 
+  [ Colin Watson ]
   * udev 117 merged all udev tools into a single binary called udevadm.
     Check for this and use it instead of udevinfo if available.
 
- -- Colin Watson <cjwatson@debian.org>  Thu, 20 Dec 2007 11:37:40 +0000
+  [ Updated translations ]
+  * Amharic (am.po) by tegegne tefera
+  * Belarusian (be.po) by Hleb Rubanau
+  * Bengali (bn.po) by Jamil Ahmed
+  * Finnish (fi.po) by Esko Arajärvi
+  * Hindi (hi.po) by Kumar Appaiah
+  * Indonesian (id.po) by Arief S Fitrianto
+  * Italian (it.po) by Stefano Canepa
+  * Korean (ko.po) by Changwoo Ryu
+  * Latvian (lv.po) by Viesturs Zarins
+  * Malayalam (ml.po) by Praveen|പ്രവീണ്‍ A|എ
+  * Panjabi (pa.po) by Amanpreet Singh Alam
+  * Polish (pl.po) by Bartosz Fenski
+  * Portuguese (Brazil) (pt_BR.po) by Felipe Augusto van de Wiel (faw)
+  * Romanian (ro.po) by Eddy Petrișor
+  * Russian (ru.po) by Yuri Kozlov
+  * Slovak (sk.po) by Ivan Masár
+  * Turkish (tr.po) by Recai Oktaş
+  * Vietnamese (vi.po) by Clytie Siddall
+
+ -- Otavio Salvador <otavio@debian.org>  Fri, 15 Feb 2008 15:27:40 -0200
 
 nobootloader (1.19) unstable; urgency=low
 
