--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+nobootloader (1.21) UNRELEASED; urgency=low
+
+  * Reduce the size of the postinst by whitespace cleanup and the use of a
+    variable for template names; also improves readability.
+
+ -- Frans Pop <fjp@debian.org>  Mon, 10 Mar 2008 08:29:08 +0100
+
 nobootloader (1.20) unstable; urgency=low
 
   [ Colin Watson ]
