--- a/debian/changelog
+++ b/debian/changelog
@@ -2,8 +2,10 @@ nobootloader (1.21) UNRELEASED; urgency=low
 
   * Reduce the size of the postinst by whitespace cleanup and the use of a
     variable for template names; also improves readability.
+  * Add support for PA Semi's evaluation systems (#464429). Thanks to
+    Olof Johansson for the patch.
 
- -- Frans Pop <fjp@debian.org>  Mon, 10 Mar 2008 08:29:08 +0100
+ -- Frans Pop <fjp@debian.org>  Mon, 10 Mar 2008 17:03:49 +0100
 
 nobootloader (1.20) unstable; urgency=low
 
