--- a/debian/changelog
+++ b/debian/changelog
@@ -4,8 +4,10 @@ nobootloader (1.21) UNRELEASED; urgency=low
     variable for template names; also improves readability.
   * Add support for PA Semi's evaluation systems (#464429). Thanks to
     Olof Johansson for the patch.
+  * Remove Matt Kraai and Sven Luther as Uploaders with many thanks for their
+    past contributions.
 
- -- Frans Pop <fjp@debian.org>  Mon, 10 Mar 2008 17:03:49 +0100
+ -- Frans Pop <fjp@debian.org>  Tue, 08 Apr 2008 13:42:51 +0200
 
 nobootloader (1.20) unstable; urgency=low
 
