--- a/debian/po/sr.po
+++ b/debian/po/sr.po
@@ -3,28 +3,24 @@
 #
 # DO NOT MODIFY THIS FILE DIRECTLY: SUCH CHANGES WILL BE LOST
 #
-# translation of debian-installer_packages_po_sublevel1_da.po to
-# Danish messages for debian-installer.
-# This file is distributed under the same license as debian-installer.
-# Henrik Christian Grove <debian@3001.dk>, 2008.
-# Jesper Dahl Nyerup <debian@jespernyerup.dk>, 2008.
-# Jacob Sparre Andersen <sparre@nbi.dk>, 2008.
-# Claus Hindsgaul <claus.hindsgaul@gmail.com>, 2004-2007.
-# Reviewed 2007 by Niels Rasmussen
+# Serbian/Cyrillic translation of cp6Linux.
+# Copyright (C) 2008 THE cp6Linux'S COPYRIGHT HOLDER
+# This file is distributed under the same license as the cp6Linux package.
+# Veselin Mijušković <veselin.mijuskovic@gmail.com>, 2008.
+# , fuzzy
 #
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: debian-installer_packages_po_sublevel1_da\n"
+"Project-Id-Version: cp6Linux 2008\n"
 "Report-Msgid-Bugs-To: debian-boot@lists.debian.org\n"
 "POT-Creation-Date: 2008-03-11 22:48+0000\n"
-"PO-Revision-Date: 2008-09-19 16:35+0200\n"
-"Last-Translator: \n"
-"Language-Team:  <en@li.org>\n"
+"PO-Revision-Date: 2008-09-19 22:27+0100\n"
+"Last-Translator: Veselin Mijušković <panzer@cp6linux.org>\n"
+"Language-Team: Serbian/Cyrillic\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);X-Generator: KBabel 1.11.4\n"
 
 #. Type: text
 #. Description
@@ -32,35 +28,35 @@ msgstr ""
 #. :sl1:
 #: ../nobootloader.templates:1001
 msgid "Continue without boot loader"
-msgstr "Fortsæt uden opstartsindlæser"
+msgstr "Настави без покретачког програма"
 
 #. Type: error
 #. Description
 #. :sl4:
 #: ../nobootloader.templates:2001
 msgid "Failed to mount /target/proc"
-msgstr "Kunne ikke montere /target/proc"
+msgstr "Нисам успео да закачим /target/proc"
 
 #. Type: error
 #. Description
 #. :sl4:
 #: ../nobootloader.templates:2001
 msgid "Mounting the proc file system on /target/proc failed."
-msgstr "Montering af proc-filsystemet på /target/proc mislykkedes."
+msgstr "Качење proc фајл система на /target/proc није успело."
 
 #. Type: error
 #. Description
 #. :sl4:
 #: ../nobootloader.templates:2001
 msgid "Check /var/log/syslog or see virtual console 4 for the details."
-msgstr "Tjek /var/log/syslog eller kig på den virtuelle konsol 4 for detaljer."
+msgstr "За детаље погледајте /var/log/syslog или виртуелну конзолу 4."
 
 #. Type: error
 #. Description
 #. :sl4:
 #: ../nobootloader.templates:2001
 msgid "Warning: Your system may be unbootable!"
-msgstr "Advarsel: Dit system er måske ude af stand til at starte op!"
+msgstr "Упозорење: ваш систем можда неће моћи да се стартује!"
 
 #. Type: note
 #. Description
@@ -74,7 +70,7 @@ msgstr "Advarsel: Dit system er måske ude af stand til at starte op!"
 #: ../nobootloader.templates:3001 ../nobootloader.templates:4001
 #: ../nobootloader.templates:5001
 msgid "Setting firmware variables for automatic boot"
-msgstr "Sætter firmware-variable til automatisk opstart"
+msgstr "Постављам променљиве фирмвера за аутоматско стартовање"
 
 #. Type: note
 #. Description
@@ -86,10 +82,10 @@ msgid ""
 "will reboot.  At the firmware prompt, set the following firmware variables "
 "to enable auto-booting:"
 msgstr ""
-"Der skal sættes nogle variabler i Genesi-firmwaren, for at dit system kan "
-"starte op automatisk. Ved afslutningen af installationen vil systemet "
-"genstarte. Sæt følgende OpenFirmware-variabler ved firmware-prompten for at "
-"aktivere automatisk opstart:"
+"Неке променљиве треба да буду постављене у Genesi фирмвер да бисе ваш систем "
+"аутоматски стартовао. На крају инсталације систем ћесе рестартовати. На "
+"промпту фирмвера поставите следеће променљиведа би омогућили аутоматско "
+"стартовање:"
 
 #. Type: note
 #. Description
@@ -102,8 +98,8 @@ msgid ""
 "You will only need to do this once.  Afterwards, enter the \"boot\" command "
 "or reboot the system to proceed to your newly installed system."
 msgstr ""
-"Du behøver kun at gøre dette én gang. Giv derefter kommandoen \"boot\" eller "
-"genstart systemet for at gå videre til dit nyinstallerede system."
+"Ово треба да урадите само једном. После тога, унесите команду \"boot\"или "
+"рестартујте ситем да би наставили рад са новоинсталираним системом."
 
 #. Type: note
 #. Description
@@ -112,9 +108,7 @@ msgstr ""
 msgid ""
 "Alternatively, you will be able to boot the kernel manually by entering, at "
 "the firmware prompt:"
-msgstr ""
-"Alternativt vil du kunne starte kernen op manuelt ved at skrive følgende i "
-"firmware-prompten:"
+msgstr "У супротном, можете стартовати кернел ручно уносећи на промптфирмвера:"
 
 #. Type: note
 #. Description
@@ -125,9 +119,9 @@ msgid ""
 "automatically. At the end of installation, the system will reboot. At the "
 "firmware prompt, set the following variables to simplify booting:"
 msgstr ""
-"Der skal sættes nogle variabler i CFE, for at dit system kan starte op "
-"automatisk. Ved afslutningen af installationen vil systemet genstarte. Sæt "
-"følgende variabler ved firmware-prompten for at forenkle opstart:"
+"Неке променљиве треба да буду постављене у CFE-у да би се ваш систем "
+"аутоматски покренуо. На крају инсталације систем ће се рестартовати. На "
+"промпту фирмвера поставите следеће променљиве да би поједноставили покретање:"
 
 #. Type: note
 #. Description
@@ -137,8 +131,8 @@ msgid ""
 "You will only need to do this once. This enables you to just issue the "
 "command \"boot_debian\" at the CFE prompt."
 msgstr ""
-"Du behøver kun gøre dette en gang. Dette gør det muligt for dig bare at "
-"afgive kommandoen \"boot debian\" ved CFE-prompten."
+"Ово треба да урадите само једном. То вам омогућује да на CFE промпту само "
+"задате команду \"boot_debian\"."
 
 #. Type: note
 #. Description
@@ -148,8 +142,8 @@ msgid ""
 "If you prefer to auto-boot on every startup, you can set the following "
 "variable in addition to the ones above:"
 msgstr ""
-"Hvis du foretrækker at boote automatisk ved hver start, kan du, udover de "
-"ovenstående, sætte de følgende variable:"
+"Ако желите да се приликом сваког стартовања аутоматски покрене ваш Дебиан "
+"систем, можете поставити следећу променљиву поред горе наведених:"
 
 #. Type: note
 #. Description
@@ -162,19 +156,19 @@ msgid ""
 "You can abort this by pressing any key. You will then be dropped into the "
 "NeTTrom command system where you have to execute the following commands:"
 msgstr ""
-"Der skal sættes nogle variabler i Netwinder NeTTrom-firmwaren for at dit "
-"system kan starte Linux op automatisk. Ved afslutningen af dette "
-"installationsstadium vil systemet genstarte, og firmwaren vil forsøge at "
-"genstarte automatisk. Du kan afbryde dette ved et tryk på en tast. Det vil "
-"føre dig til NeTTroms kommandosystem, hvor du skal udføre følgende "
-"kommandoer:"
+"Неке променљиве треба да буду постављене у Netwinder NeTTrom фирмвер да би "
+"се ваш систем аутоматски покретао. На крају инсталације систем ће се "
+"рестартовати и фирмвер ће покушати аутоматско покретање система. Ово можете "
+"прекинути притиском на било који тастер. После тога ћете бити пребачени у "
+"NeTTrom командни систем где морате извршити следеће команде:"
 
 #. Type: note
 #. Description
 #. :sl3:
 #: ../nobootloader.templates:6001
+#, fuzzy
 msgid "No boot loader installed"
-msgstr "Ingen opstartsindlæser installeret"
+msgstr "Уређај на којем ће се инсталирати бут лоудер:"
 
 #. Type: note
 #. Description
@@ -184,9 +178,6 @@ msgid ""
 "No boot loader has been installed, either because you chose not to or "
 "because your specific architecture doesn't support a boot loader yet."
 msgstr ""
-"Der er ikke installeret nogen opstartsindlæser. Enten fordi du har valgt "
-"ikke at gøre det, eller fordi din computers arkitektur endnu ikke "
-"understøtter en opstartsindlæser."
 
 #. Type: note
 #. Description
@@ -196,5 +187,3 @@ msgid ""
 "You will need to boot manually with the ${KERNEL} kernel on partition "
 "${BOOT} and ${ROOT} passed as a kernel argument."
 msgstr ""
-"Du bliver nødt til at starte op manuelt med ${KERNEL}-kernen på partitionen "
-"${BOOT} og give kommandoen ${ROOT} som kerneparameter."
