--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+nobootloader (1.30) UNRELEASED; urgency=low
+
+  [ Samuel Thibault ]
+  * Add hurd-i386 support.
+
+ -- Samuel Thibault <sthibault@debian.org>  Mon, 14 Feb 2011 08:48:23 +0100
+
 nobootloader (1.29) unstable; urgency=low
 
   [ Updated translations ]
